<resources>
    <string name="app_name">熊猫文旅通</string>
    <string name="nfc_read_card_wait_alert">打开手机NFC功能\n将卡片贴于手机背面NFC感应区\n（若卡片无反应，移动卡片寻找NFC感应区）</string>
    <string name="please_use_card">请帖卡</string>
    <string name="login_willlogin">登录</string>
    <string name="login_islogin">已登录</string>
    <string name="login_will_wxlogin">微信登录</string>
    <string name="login_willreg">注册</string>
    <string name="login_forgetpass">忘记密码</string>
    <string name="login_wx_nextstep">保存</string>
    <string name="login_wx_phonebind">手机绑定</string>
    <string name="login_wx_querycode">获取验证码</string>
    <string name="login_wx_editokphone">请输入正确的手机号码</string>

    <string name="main_frag_home">首页</string>
    <string name="main_frag_travel">旅游</string>
    <string name="main_frag_shop">导览</string>
    <string name="main_frag_mine">我</string>
    <string name="login_phonenum">手机号</string>
    <string name="login_phonenum_reg">手机号快速注册</string>
    <string name="login_phonenum_for">忘记密码</string>
    <string name="login_password">登录密码</string>


    <string name="fragment_home_active">激活</string>
    <string name="fragment_home_recharge">充值</string>
    <string name="fragment_home_discounts">权益</string>
    <string name="fragment_home_useread">使用说明</string>

    <string name="fragment_home_cardmoney">余额</string>
    <string name="fragment_home_cardusetime">卡片有效期</string>
    <string name="fragment_home_xxxxxxx">0.0</string>


    <string name="fragment_mine_active">添加</string>
    <string name="fragment_mine_useread">挂失/解冻</string>
    <string name="fragment_mine_order">我的订单</string>
    <string name="fragment_mine_eid">我的eID</string>

    <string name="fragment_mine_minewallet">我的钱包</string>
    <string name="fragment_mine_minecardwallet">我的卡劵</string>
    <string name="fragment_mine_minerecord">充值记录|</string>
    <string name="fragment_mine_minesummoney">卡中余额|</string>
    <string name="fragment_mine_payset">支付管理</string>


    <string name="fragment_mine_reqinvoice">发票申请</string>
    <string name="fragment_mine_onlineser">在线客服</string>
    <string name="fragment_mine_address">地址簿</string>
    <string name="fragment_mine_changepass">修改密码</string>
    <string name="fragment_mine_twxt_about">关于我们</string>
    <string name="fragment_mine_twxt_edit">编辑资料</string>
    <string name="fragment_mine_my_cards">我的熊猫卡</string>
    <string name="fragment_mine_my_cardsnum">熊猫卡号 :</string>


    <string name="fragment_bycar_text_select">选择</string>
    <string name="fragment_bycar_text_chognzhi">充值</string>
    <string name="fragment_bycar_text_more">更多操作</string>
    <string name="fragment_bycar_text_yue">余额</string>
    <string name="fragment_bycar_text_youxiaoqi">有效期：长期</string>
    <string name="fragment_bycar_text_cardtype">片类型：全国交通一卡通</string>
    <string name="fragment_bycar_text_usedevices">当前使用设备</string>
    <string name="fragment_bycar_text_outser">出行服务</string>
    <string name="fragment_bycar_text_subline">(线路图查询等)</string>
    <string name="fragment_bycar_text_subflybus">(公交地铁飞机等)</string>
    <string name="fragment_bycar_text_trainsale">乘车优惠推荐</string>
    <string name="fragment_bycar_text_usehelp">使用帮助</string>
    <string name="fragment_bycar_text_num">卡号 ：</string>
    <string name="fragment_bycar_text_money">余额 ：</string>
    <string name="fragment_bycar_text_exception">异常处理 ：</string>
    <string name="fragment_bycar_text_onlycardtype">卡类型 ：</string>
    <string name="fragment_bycar_text_currentusetype">当前类型 ：</string>


    <string name="nfcact_title_textname">充值写卡</string>
    <string name="nfcact_title_savemoney">交通充值</string>


    <string name="nfcact_title_fapiao">发票信息 |</string>
    <string name="nfcact_title_tishi"> 温馨提示 |</string>
    <string name="nfcact_title_realpaymoney"> 实付金额  ： </string>
    <string name="nfcact_title_realpaymoney_commit"> 立即充值 </string>
    <string name="nfcact_title_realpaymoney_othermoney"> 其他金额 </string>


    <string name="moredispose_text_hist">充值记录</string>

    <string name="regist_title_name">注册</string>
    <string name="reset_title_name">重置</string>
    <string name="regist_writenum">手机号</string>
    <string name="regist_writesecuritycode">验证码</string>
    <string name="regist_getwritesecuritycode">获取验证码</string>
    <string name="regist_writepassix">请输入六位数密码</string>
    <string name="regist_rewritepassix">确认密码</string>
    <string name="regist_anncommit">提交</string>

    <string name="cardactive_title_eidact">添加卡片</string>
    <string name="cardactive_idxcrad_read">请贴身份证...</string>
    <string name="cardactive_idxcrad_read2">请将身份证靠进手机所示识别</string>
    <string name="cardactive_idxcrad_read3">识别过程中请勿离开身份证</string>
    <string name="cardactive_idxcrad_start">读取中，请勿移动</string>
    <string name="cardactive_idxcrad_failed">读取失败</string>
    <string name="cardactive_idxcrad_ok">读取成功</string>
    <string name="cardactive_nextin">正在取卡</string>
    <string name="cardactive_nextstep">下一步</string>
    <string name="cardactive_idcardreadover">请贴熊猫卡......</string>
    <string name="cardactive_idcardreadover2">请将熊猫卡靠近进手机所示识别</string>
    <string name="cardactive_idcardreadover3">识别过程中请勿离开熊猫卡</string>
    <string name="cardactive_idcardreadover4">请输入卡片上图层后的校验码</string>
    <string name="cardactive_idcardreadover5">校验码</string>
    <string name="cardactive_faceover">人脸识别成功</string>
    <string name="cardactive_infinding">正在识别人脸</string>


    <string name="cardactive_cardsisbind">已绑卡</string>
    <string name="cardactive_cardsnotbind">未绑卡</string>


    <string name="eidactivity_shiming1">添加证件</string>
    <string name="eidactivity_shiming2">○ 请准备好身份证、熊猫卡</string>
    <string name="eidactivity_shiming3">○ 以及具备NFC功能的手机</string>
    <string name="eidactivity_sadd">添加</string>
    <string name="eidactivity_eidreg">激活</string>
    <string name="eidactivity_eidname">数字身份</string>
    <string name="eidactivity_shimingshenfen">○ 您的熊猫卡将嵌入eID数字身份，实现实名认证。</string>
    <string name="eidactivity_iagrees">我同意</string>
    <string name="eidactivity_iagrees2">《eID用户协议》</string>


    <string name="eidactivity_bindphone">手机:  </string>
    <string name="eidactivity_bindcard">卡号:  </string>
    <string name="eidactivity_msgok">信息确认</string>
    <string name="eidactivity_msgfa">信息错误</string>


    <string name="eidactivity_cardinfo">订单信息</string>
    <string name="eidactivity_cardstatus">卡片列表</string>
    <string name="eidactivity_cardtype">订单号码： </string>
    <string name="eidactivity_cardpay">消费： </string>
    <string name="eidactivity_changedefault">默认</string>
    <string name="eidactivity_cardnum">卡号： </string>
    <string name="eidactivity_yquancun">已圈存 </string>
    <string name="eidactivity_nquancun">未圈存 </string>
    <string name="eidactivity_quancun">圈存状态： </string>

    <string name="eidactivity_nodate">暂无数据</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 小路ppppppppppppppppppppppp小路-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="pull_finish">亲无更多数据</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


    <string name="bypanda_bynum">购买数量</string>
    <string name="bypanda_ok">确定</string>
    <string name="bypanda_pandatrevcard">熊猫文旅通卡</string>
    <string name="bypanda_pandatrevtext">出行交通全国通用，让出行更省心</string>
    <string name="bypanda_productmsg">产品参数</string>
    <string name="bypanda_whatspanda">什么是熊猫文旅通卡？</string>
    <string name="bypanda_byread">《熊猫文旅通卡购买须知》</string>
    <string name="bypanda_agreeandread">已阅读并同意 </string>
    <string name="bypanda_busuccess">确认购买</string>
    <string name="bypanda_busuccess_order">确认订单</string>
    <string name="bypanda_order_detal">订单详情</string>
    <string name="bypanda_mytransaddress">我的收货地址</string>
    <string name="bypanda_addmytransaddress">添加新地址</string>

    <string name="bypanda_yansefenlei">颜色分类</string>
    <string name="bypanda_yansefenlei_nianka">   熊猫文旅通卡-年卡   </string>

    //权限申请
    <string name="content_to_request_permission">保证应用正常运行，请授予必要权限！</string>
    <string name="attention">提示</string>
    <string name="ok_text">好的~</string>
    <string name="title_activity_rea_travel">ReaTravelActivity</string>

    <string name="fragment_travelhome_active">景区旅游</string>
    <string name="fragment_travelhome_recharge">通卡购买</string>
    <string name="fragment_travelhome_discounts">卡单列表</string>
    <string name="fragment_travelhome_useread">我的订单</string>

    <string name="fragment_address_useread">收货人</string>
    <string name="fragment_address_phonenumber">手机号码</string>
    <string name="fragment_address_province">省  </string>
    <string name="fragment_address_city">市  </string>
    <string name="fragment_address_quxian">区县 </string>
    <string name="fragment_address_detal">详细地址 ： </string>
    <string name="fragment_address_isdefault">设为默认 ： </string>




    <string name="fragment_card_order_detal_sends">赠送版 </string>
    <string name="fragment_card_order_detal_not">不支持退款 </string>
    <string name="fragment_card_order_detal_realpay">实付款 </string>
    <string name="fragment_card_order_detal_ordernum">订单编号: </string>
    <string name="fragment_card_order_detal_ordertime">下单时间: </string>
    <string name="fragment_card_order_detalpaytime">支付时间: </string>
    <string name="fragment_card_order_detalpayway">支付方式: </string>
    <string name="fragment_card_order_wechatpay">微信支付 </string>
    <string name="fragment_card_order_byagain">再次购买 </string>



    <string name="fragment_conform_sendway">配送方式 </string>
    <string name="fragment_conform_ordernote">订单备注 </string>
    <string name="fragment_conform_conformorder">提交订单 </string>


    <string name="title_alert">提示</string>
    <string name="message">您确认需要删除订单吗？</string>
    <string name="map_title">请选择语音方式</string>
    <string name="map_msg">小鹿建议现在下载离线语音包</string>
    <string name="map_load">下载离线包</string>
    <string name="map_play">在线收听</string>
    <string name="ok">删除</string>
    <string name="quit">退出</string>
    <string name="cancel">取消</string>


</resources>
