<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/recyaleview_item"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cardinfo_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="wwwwwwwww" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dadada"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eidactivity_cardtype" />

            <TextView
                android:id="@+id/cardinfo_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="wwwwwwwww" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eidactivity_cardpay" />

            <TextView
                android:id="@+id/cardinfo_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eidactivity_cardnum" />

            <TextView
                android:id="@+id/cardinfo_cardnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eidactivity_quancun" />

            <TextView
                android:id="@+id/cardinfo_quancun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>